--- a/helm/templates/task.yaml
+++ b/helm/templates/task.yaml
@@ -17,17 +17,11 @@ spec:
   workspaces:
     - name: source
   params:
-    - name: SONAR_HOST_URL
+    - name: SONAR_URL
       description: Host URL where the sonarqube server is running
       default: ""
     - name: SONAR_PROJECT_KEY
       description: Project's unique key
-      default: ""
-    - name: SONAR_LOGIN
-      description: Sonar username
-      default: ""
-    - name: SONAR_PASSWORD
-      description: Sonar password
       default: ""
     - name: SONAR_CREDS_SECRET_NAME
       description: Sonar credentials secret name
@@ -37,7 +31,7 @@ spec:
       image: registry.access.redhat.com/ubi8/ubi-minimal:8.9-1029
       workingDir: $(workspaces.source.path)
       env:
-        - name: SONAR_LOGIN
+        - name: SONAR_USERNAME
           valueFrom:
             secretKeyRef:
               name: $(params.SONAR_CREDS_SECRET_NAME)
@@ -65,14 +59,14 @@ spec:
         }
         
         if [[ -f $(workspaces.source.path)/sonar-project.properties ]]; then
-          if [[ -n "$(params.SONAR_HOST_URL)" ]]; then
-            replaceValues $(workspaces.source.path)/sonar-project.properties sonar.host.url $(params.SONAR_HOST_URL)
+          if [[ -n "$(params.SONAR_URL)" ]]; then
+            replaceValues $(workspaces.source.path)/sonar-project.properties sonar.host.url $(params.SONAR_URL)
           fi
           if [[ -n "$(params.SONAR_PROJECT_KEY)" ]]; then
             replaceValues $(workspaces.source.path)/sonar-project.properties sonar.projectKey $(params.SONAR_PROJECT_KEY)
           fi
         
-          replaceValues $(workspaces.source.path)/sonar-project.properties sonar.login $SONAR_LOGIN
+          replaceValues $(workspaces.source.path)/sonar-project.properties sonar.login $SONAR_USERNAME
           replaceValues $(workspaces.source.path)/sonar-project.properties sonar.password $SONAR_PASSWORD
         
         else
@@ -83,13 +77,4 @@ spec:
       image: stakater/pipeline-toolbox:v0.0.36
       workingDir: $(workspaces.source.path)
       command:
-        - /bin/bash
-      args:
-        - -c
-        - |
-          if [ -f "pom.xml" ]
-          then
-            mvn -f pom.xml clean package
-          fi
-          sonar-scanner
-          
+        - sonar-scanner
