--- a/task/stakater-sonarqube-scan/stakater-sonarqube-scan.yaml
+++ b/task/stakater-sonarqube-scan/stakater-sonarqube-scan.yaml
@@ -5,7 +5,7 @@ kind: Task
 metadata:
   name: stakater-sonarqube-scan
   labels:
-    app.kubernetes.io/version: "0.0.0"
+    app.kubernetes.io/version: "0.0.13"
 spec:
   description: >-
     The following task can be used to perform static analysis on the source code
@@ -19,17 +19,11 @@ spec:
   workspaces:
     - name: source
   params:
-    - name: SONAR_HOST_URL
+    - name: SONAR_URL
       description: Host URL where the sonarqube server is running
       default: ""
     - name: SONAR_PROJECT_KEY
       description: Project's unique key
-      default: ""
-    - name: SONAR_LOGIN
-      description: Sonar username
-      default: ""
-    - name: SONAR_PASSWORD
-      description: Sonar password
       default: ""
     - name: SONAR_CREDS_SECRET_NAME
       description: Sonar credentials secret name
@@ -39,7 +33,7 @@ spec:
       image: registry.access.redhat.com/ubi8/ubi-minimal:8.9-1029
       workingDir: $(workspaces.source.path)
       env:
-        - name: SONAR_LOGIN
+        - name: SONAR_USERNAME
           valueFrom:
             secretKeyRef:
               name: $(params.SONAR_CREDS_SECRET_NAME)
@@ -67,14 +61,14 @@ spec:
         }
         
         if [[ -f $(workspaces.source.path)/sonar-project.properties ]]; then
-          if [[ -n "$(params.SONAR_HOST_URL)" ]]; then
-            replaceValues $(workspaces.source.path)/sonar-project.properties sonar.host.url $(params.SONAR_HOST_URL)
+          if [[ -n "$(params.SONAR_URL)" ]]; then
+            replaceValues $(workspaces.source.path)/sonar-project.properties sonar.host.url $(params.SONAR_URL)
           fi
           if [[ -n "$(params.SONAR_PROJECT_KEY)" ]]; then
             replaceValues $(workspaces.source.path)/sonar-project.properties sonar.projectKey $(params.SONAR_PROJECT_KEY)
           fi
         
-          replaceValues $(workspaces.source.path)/sonar-project.properties sonar.login $SONAR_LOGIN
+          replaceValues $(workspaces.source.path)/sonar-project.properties sonar.login $SONAR_USERNAME
           replaceValues $(workspaces.source.path)/sonar-project.properties sonar.password $SONAR_PASSWORD
         
         else
@@ -85,12 +79,4 @@ spec:
       image: stakater/pipeline-toolbox:v0.0.36
       workingDir: $(workspaces.source.path)
       command:
-        - /bin/bash
-      args:
-        - -c
-        - |
-          if [ -f "pom.xml" ]
-          then
-            mvn -f pom.xml clean package
-          fi
-          sonar-scanner
+        - sonar-scanner
