--- a/task/stakater-sonarqube-scan/stakater-sonarqube-scan.yaml
+++ b/task/stakater-sonarqube-scan/stakater-sonarqube-scan.yaml
@@ -5,7 +5,7 @@ kind: Task
 metadata:
   name: stakater-sonarqube-scan
   labels:
-    app.kubernetes.io/version: "0.0.16"
+    app.kubernetes.io/version: "0.0.17"
 spec:
   description: >-
     The following task can be used to perform static analysis on the source code
@@ -31,7 +31,7 @@ spec:
       default: "sonar-creds"
   steps:
     - name: sonar-properties
-      image: registry.access.redhat.com/ubi8/ubi-minimal:8.9-1029
+      image: registry.access.redhat.com/ubi8/ubi-minimal:8.9-1137
       workingDir: $(workspaces.source.path)
       env:
         - name: SONAR_USERNAME
@@ -90,4 +90,12 @@ spec:
       image: ghcr.io/stakater/pipeline-toolbox:v0.0.37
       workingDir: $(workspaces.source.path)
       command:
-        - sonar-scanner
+        - /bin/bash
+      args:
+        - -c
+        - |
+          if [ -f "pom.xml" ]
+          then
+            mvn -f pom.xml clean package
+          fi
+          sonar-scanner
