--- a/helm/templates/task.yaml
+++ b/helm/templates/task.yaml
@@ -27,6 +27,9 @@ spec:
     - name: SONAR_CREDS_SECRET_NAME
       description: Sonar credentials secret name
       default: "sonar-creds"
+    - name: SONAR_PROPERTIES_FILE_PATH
+      description: Sonar properties file path
+      default: "sonar-project.properties"
   steps:
     - name: sonar-properties
       image: registry.access.redhat.com/ubi8/ubi-minimal:8.9-1137
@@ -65,20 +68,20 @@ spec:
           fi
         }
         
-        if [[ -f $(workspaces.source.path)/sonar-project.properties ]]; then
+        if [[ -f $(workspaces.source.path)/$(params.SONAR_PROPERTIES_FILE_PATH) ]]; then
           if [[ "$(params.SONAR_URL)" != "NA" ]]; then
-            replaceValues $(workspaces.source.path)/sonar-project.properties sonar.host.url $(params.SONAR_URL)
+            replaceValues $(workspaces.source.path)/$(params.SONAR_PROPERTIES_FILE_PATH) sonar.host.url $(params.SONAR_URL)
           else 
             if [[ -n "${SONAR_URL}" ]]; then
-              replaceValues $(workspaces.source.path)/sonar-project.properties sonar.host.url ${SONAR_URL}   
+              replaceValues $(workspaces.source.path)/$(params.SONAR_PROPERTIES_FILE_PATH) sonar.host.url ${SONAR_URL}   
             fi
           fi
           if [[ -n "$(params.SONAR_PROJECT_KEY)" ]]; then
-            replaceValues $(workspaces.source.path)/sonar-project.properties sonar.projectKey $(params.SONAR_PROJECT_KEY)
+            replaceValues $(workspaces.source.path)/$(params.SONAR_PROPERTIES_FILE_PATH) sonar.projectKey $(params.SONAR_PROJECT_KEY)
           fi
         
-          replaceValues $(workspaces.source.path)/sonar-project.properties sonar.login $SONAR_USERNAME
-          replaceValues $(workspaces.source.path)/sonar-project.properties sonar.password $SONAR_PASSWORD
+          replaceValues $(workspaces.source.path)/$(params.SONAR_PROPERTIES_FILE_PATH) sonar.login $SONAR_USERNAME
+          replaceValues $(workspaces.source.path)/$(params.SONAR_PROPERTIES_FILE_PATH) sonar.password $SONAR_PASSWORD
         
         else
           echo "No sonar-project.properties found"
