--- a/task/stakater-sonarqube-scan/stakater-sonarqube-scan.yaml
+++ b/task/stakater-sonarqube-scan/stakater-sonarqube-scan.yaml
@@ -5,7 +5,7 @@ kind: Task
 metadata:
   name: stakater-sonarqube-scan
   labels:
-    app.kubernetes.io/version: "0.0.22"
+    app.kubernetes.io/version: "0.0.23"
 spec:
   description: >-
     The following task can be used to perform static analysis on the source code
@@ -91,6 +91,11 @@ spec:
         fi
     - name: sonar-scan
       image: ghcr.io/stakater/pipeline-toolbox:v0.0.41
+      env:
+        - name: LANG
+          value: C.UTF-8 
+        - name: LC_ALL
+          value: C.UTF-8 
       workingDir: $(workspaces.source.path)
       command:
         - /bin/bash
